fixed arrow spacing on button

--- a/src/assets/sass/_form_elements.scss
+++ b/src/assets/sass/_form_elements.scss
@@ -141,9 +141,13 @@ button {
 	font-weight: $weight-bold;
 
 	&:before {
+		display:inline-block;
+		width:1em;
+		text-align:left;
 		content: '\232a';
 		font-weight: $weight-normal;
 		font-size: 80%;
+		line-height: 1em;
 
 	}
 }
